<resources>

    <string name="app_name">LinearLightsOutMenu</string>
    <string name="main_title">Linear Lights Out</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Lights Out Menu</string>
    <string name="play_start">Play with 7 buttons</string>
    <string name="play_format">Play with %d buttons</string>
    <string name="change_num_buttons_text">Change the number of buttons</string>
    <string name="about">About Linear Lights Out</string>
    <string name="exit">Exit</string>
    <string name="about_description">Clicking a button
toggles the state of that button and any neighboring
buttons. The goal is to make all the buttons match.</string>
    <string name="radio_label_3"> 3 Buttons</string>
    <string name="radio_label_5"> 5 Buttons</string>
    <string name="radio_label_7"> 7 Buttons</string>
    <string name="radio_label_9"> 9 Buttons</string>
    <string name="game_start">Game start!</string>
    <string name="new_game">New game</string>
    <string name="you_won_one_move">You won in one move!</string>
    <string name="you_won_format_string">You won in %d moves.</string>
    <string name="game_one_move">One move so far!</string>
    <string name="game_format">%d moves so far!</string>

</resources>