<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentTop="true"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="110dp" >

        <RadioButton
            android1:id="@+id/radio_3"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/radio_label_3" />

        <RadioButton
            android1:id="@+id/radio_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android1:text="@string/radio_label_5" />

        <RadioButton
            android1:id="@+id/radio_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android1:text="@string/radio_label_7" />

        <RadioButton
            android1:id="@+id/radio_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android1:text="@string/radio_label_9" />
    </RadioGroup>

    <TextView
        android1:layout_width="match_parent"
        android1:layout_height="match_parent"
        android1:layout_alignParentBottom="true"
        android1:layout_alignParentLeft="true"
        android1:text="@string/change_num_buttons_text" />

</RelativeLayout>